--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Bem vindo(a) novamente. Faça login para acessar sua conta.</p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div id="campo">
+                        <label for="iemail">E-mail</label>
+                        <input type="email" name="email" id="iemail" placeholder="Seu e-mail." autocomplete="email" maxlength="30" required>
+                    </div>
+                    <div id="campo">
+                        <label for="isenha">Senha</label>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha." autocomplete="current-password" minlength="8" max="20" required>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <p><a href="#">Esqueci a senha.</a></p>
                 </form>
             </div>
         </section>
