--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha." autocomplete="current-password" minlength="8" max="20" required>
                     </div>
                     <input type="submit" value="Entrar">
-                    <p><a href="#">Esqueci a senha.</a></p>
+                    <a href="#" class="botao">Esqueci a senha</a>
                 </form>
             </div>
         </section>
